--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ html{
     background-color: cadetblue;
     border: 3px dashed whitesmoke;
 }
+#content{
+    margin: 0 auto;
+    width: 100%;
+}
 .content{
     position: relative;
     left: 242.5px;
@@ -207,9 +211,9 @@ ul li{
 }
 
 .content-texto{
-    width: 90%;
-
-    margin: auto;
+    width: 100%;
+    height: max-content;
+    margin:0 auto;
     
 }
 
