--- a/style.css
+++ b/style.css
@@ -454,5 +454,12 @@ footer{
     #sessao-sobre .img-2{
         height: 300px;
     }
+
+    
+
+.titulo-sobre {
+    padding-top: 100px;
+   
+}
   
 }
